raw/ZAHIRA NAJMA 6421 245150207111056/2024-11-14-11-29-23.ceg/compilation.txt
NT.java:16: error: ';' expected
        double[] nilaiMasuk = {7,1,2,3,4}
                                         ^
NT.java:24: error: illegal start of expression
    public static void main(String[] args) {
    ^
2 errors
Not compiled
